// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TransactionFunctionCall.vue Should display transaction call 1`] = `
<div class="v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text" style="">
    transfer(

    <div class="ml-4" style="white-space: pre;"><span class="ml-4 pl-0"><span>address dst: </span> <span>
            (<a id="switchFormatted">Display Raw</a> <!---->)
         <span class=""><span><span><!----> <a href="/address/0xc00e94Cb662C3520282E6f5717214004A7f26888" class="">0xc00e94...6888</a> <!----> <span>
        &nbsp;<button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xc00e94Cb662C3520282E6f5717214004A7f26888" value="0xc00e94Cb662C3520282E6f5717214004A7f26888"></span>
      <!----></span></span></span></span></span>
    </div>
    <div class="ml-4" style="white-space: pre;"><span class="ml-4 pl-0"><span>uint256 rawAmount: </span> <span><!----> <span class="" style="white-space: break-spaces;">1</span></span></span></div>
    )
  </div>
</div>
`;

exports[`TransactionFunctionCall.vue Should display warning if no ABI 1`] = `
<div class="v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text" style="max-height: 250px; overflow-y: scroll; overflow-x: hidden;">
    <div style="float: right;"><a class="">Hex</a> | <a class="underlined">UTF-8</a></div> <b>Signature:</b> 0xb9059cbb<br> <b>Data:</b> 0xb9059cbb23456789
  </div>
</div>
`;

exports[`TransactionFunctionCall.vue Should handle arrays as parameters 1`] = `
<div class="v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text" style="">
    reproWriteBug(

    <div class="ml-4" style="white-space: pre;"><span class="ml-4 pl-0"><span>uint256[] values: </span> <span><!----> <span class=""><span>
                [

                    <span><span class="ml-8 pl-0"><!----> <span><!----> <span class="" style="white-space: break-spaces;">1</span></span></span>


      </span><span><span class="ml-8 pl-0"><!----> <span><!----> <span class="" style="white-space: break-spaces;">3</span></span></span>


      </span> <span class="ml-4 pl-0">]</span></span></span></span></span></div>
    )
  </div>
</div>
`;

exports[`TransactionFunctionCall.vue Should load erc20 abi if function is detected 1`] = `
<div class="v-card v-sheet v-sheet--outlined theme--light">
  <div class="v-card__text" style="">
    transfer(

    <div class="ml-4" style="white-space: pre;"><span class="ml-4 pl-0"><span>address _to: </span> <span>
            (<a id="switchFormatted">Display Raw</a> <!---->)
         <span class=""><span><span><!----> <a href="/address/0xc00e94Cb662C3520282E6f5717214004A7f26888" class="">0xc00e94...6888</a> <!----> <span>
        &nbsp;<button type="button" class="v-icon notranslate v-icon--link mdi mdi-content-copy theme--light" style="font-size: 12px;"></button><input type="hidden" id="copyElement-0xc00e94Cb662C3520282E6f5717214004A7f26888" value="0xc00e94Cb662C3520282E6f5717214004A7f26888"></span>
      <!----></span></span></span></span></span>
    </div>
    <div class="ml-4" style="white-space: pre;"><span class="ml-4 pl-0"><span>uint256 _value: </span> <span><!----> <span class="" style="white-space: break-spaces;">1</span></span></span></div>
    )
  </div>
</div>
`;
